# aws-services-lib

./: Cargo.toml  README.md
src/: lib.rs  utilities.rs
src/datapipelines/: datapipelines.rs  mod.rs
src/datapipelines/models/: mod.rs  pipeline.rs  pipeline_task_status.rs  pipeline_tasks.rs
src/errors/models/: error_response.rs
src/s3/: mod.rs  s3.rs
src/s3/models/: mod.rs  s3_list_object.rs  s3_location.rs
