[package]
name = "aws-services-lib"
version = "0.0.1"
edition = "2018"

[dependencies]
rusoto_core = "0.36.0"
rusoto_datapipeline = "0.36.0"
rusoto_credential = "0.15.0"
chrono = "0.4.6"
serde = "1.0.60"
serde_derive = "1.0.39"
serde_json = "1.0.39"
rusty-toolbox = { git = "https://github.com/brother-wolf/rusty-toolbox", tag = "v0.0.1" }